# MeshCleaner

./: README.md  clean_mesh.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: renovate.json5
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  codeql.yml  devcontainer-smoke.yml  release.yml  uv-lock-check.yml
tests/: test_clean_mesh.py
